# graph_tool

./: CMakeLists.txt  background_image_selector_dialog.cpp  background_image_selector_dialog.h  chatbox-exported-data-2025-5-13.json  color_frame.cpp  color_frame.h  color_selector_popup.cpp  color_selector_popup.h  color_selector_popup_fill.cpp  color_selector_popup_fill.h  colorframe.cpp  colorframe.h  colorselectorpopup.cpp  colorselectorpopup.h  custom_rect_item.cpp  custom_rect_item.h  editable_line_item.cpp  editable_line_item.h  editable_polyline_item.cpp  editable_polyline_item.h  editablelineitem.cpp  editablelineitem.h  editablepolylineitem.cpp  editablepolylineitem.h  graph_manager.cpp  graph_manager.h  graphics_tool_view.cpp  graphics_tool_view.h  graphicstoolview.cpp  graphicstoolview.h  graphmanager.cpp  graphmanager.h  handle_item.cpp  handle_item.h  handleitem.cpp  handleitem.h  imagecanvas.cpp  imagecanvas.h  main.cpp  mainwindow.cpp  (+6 more)
